--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
