--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "axios-cache-interceptor": "^1.0.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "8.5.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-standard": "5.0.0",
     "eslint-plugin-testing-library": "5.7.2",
     "next": "13.2.4",
+    "pokenode-ts": "^1.18.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2",
